# triangle

./: CMakeLists.txt  readme.md
showme/: CMakeLists.txt
test/: CMakeLists.txt  triangle_with_edge.cpp  utils.hpp
triangle/: CMakeLists.txt  triangle.cpp  triangle.h
tricall/: CMakeLists.txt  tricall.cpp
